# datasci-toolkit

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
datasci_toolkit/: __init__.py  bin_editor.py  bin_editor_widget.py  grouping.py  label_imputation.py  metrics.py  model_selection.py  reject_inference.py  smoothing.py  stability.py  tagging.py  temporal.py  variable_clustering.py
datasci_toolkit/feature_elimination/: __init__.py  _plot.py  _shap.py  elimination.py  importance.py
docs/: index.md
docs/api/: bin_editor.md  feature_elimination.md  grouping.md  label_imputation.md  metrics.md  model_selection.md  smoothing.md  stability.md  tagging.md  variable_clustering.md
docs/superpowers/plans/: 2026-03-29-temporal-feature-engineering.md  2026-04-05-shap-feature-elimination.md  2026-04-05-smoothing-tagging.md
docs/superpowers/specs/: 2026-03-29-temporal-feature-engineering-design.md  2026-04-05-shap-feature-elimination-design.md  2026-04-05-smoothing-tagging-design.md
docs/tutorials/: bin_editor.md  feature_elimination.md  grouping.md  label_imputation.md  metrics.md  model_selection.md  smoothing.md  stability.md  tagging.md  temporal.md  variable_clustering.md
examples/: 01_stability.py  02_grouping.py  03_metrics.py  04_model_selection.py  05_label_imputation.py  06_bin_editor.py  07_variable_clustering.py
examples/__marimo__/session/: 01_stability.py.json  02_grouping.py.json  03_metrics.py.json  04_model_selection.py.json  05_label_imputation.py.json  06_bin_editor.py.json  07_variable_clustering.py.json
scripts/: gen_index.py
tests/: test_bin_editor.py  test_bin_editor_widget.py  test_feature_elimination.py  test_grouping.py  test_label_imputation.py  test_metrics.py  test_model_selection.py  test_reject_inference.py  test_smoothing.py  test_stability.py  test_tagging.py  test_temporal.py  test_variable_clustering.py
