[project]
name = "datasci-toolkit"
version = "0.2.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.21",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "optbinning>=0.21.0",
    "polars>=1.39.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "marimo>=0.21.1",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.hatch.build.targets.wheel]
packages = ["datasci_toolkit"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
