[project]
name = "datasci-toolkit"
version = "0.2.0"
description = "Polars-native Python toolkit for binary classification and model validation"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Daniel Herman", email = "daniel.herman@protonmail.com"}]
keywords = ["machine-learning", "feature-selection", "polars", "shap", "psi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "anywidget>=0.9.21",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "optbinning>=0.21.0",
    "polars>=1.39.3",
    "scikit-learn>=1.8.0",
    "shap>=0.46.0",
    "xgboost>=2.1.0",
    "scipy>=1.17.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "marimo>=0.21.1",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.hatch.build.targets.wheel]
packages = ["datasci_toolkit"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
